Dev instance config

--- a/archive/docker-compose.yml
+++ b/archive/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     image: subsquid/substrate-ingest:firesquid
     command: [
         '-e',
-        'ws://joystream-node:9944',
+        'wss://atlas-dev.joystream.org/ws-rpc',
         '-c',
         '20', # allow up to 20 pending requests for the above endpoint (default is 5)
         #  "--start-block", "1000000", # uncomment to specify a non-zero start block
@@ -70,8 +70,7 @@ services:
 
 networks:
   default:
-    external:
-      name: joystream_default
+    name: orion 
 
 volumes:
   orion_archive_db_data:
