--- a/archive/.env
+++ b/archive/.env
@@ -1,4 +1,4 @@
 DB_PORT=12345
 GATEWAY_PORT=8888
-WS_SOURCE=ws://joystream-node:9944
+WS_SOURCE=wss://atlas-next.joystream.org/ws-rpc
 EXPLORER_PORT=4444
