--- a/archive/docker-compose.yml
+++ b/archive/docker-compose.yml
@@ -48,7 +48,8 @@ services:
         # (e.g. Moonbeam/Moonriver or Astar/Shiden)
       ]
     ports:
-      - '8888:8000'
+      - '127.0.0.1:8888:8000'
+      - '[::1]:8888:8000'
 
   # Explorer service is optional.
   # It provides rich GraphQL API for querying archived data.
@@ -65,7 +66,8 @@ services:
       DB_USER: 'postgres'
       DB_PASS: 'postgres'
     ports:
-      - '${EXPLORER_PORT}:3000'
+      - '127.0.0.1:${EXPLORER_PORT}:3000'
+      - '[::1]:${EXPLORER_PORT}:3000'
 
 networks:
   default:
