--- a/docker.env
+++ b/docker.env
@@ -4,5 +4,7 @@
 DB_HOST=orion_db
 # Processor service host
 PROCESSOR_HOST=orion_processor
+# Redis host
+REDIS_HOST=orion_cache
 # Archive gateway host&port (can be overriden via local env)
 ARCHIVE_GATEWAY_URL=${CUSTOM_ARCHIVE_GATEWAY_URL:-http://orion_archive_gateway:8000/graphql}
