--- a/.env
+++ b/.env
@@ -10,6 +10,10 @@ PROCESSOR_HOST=localhost
 PROCESSOR_PROMETHEUS_PORT=3337
 # Graphql server port
 GQL_PORT=4350
+# Redis host
+REDIS_HOST=localhost
+# Redis port
+REDIS_PORT=6399
 
 # Archive gateway url
 ARCHIVE_GATEWAY_URL=${CUSTOM_ARCHIVE_GATEWAY_URL:-http://localhost:8888/graphql}
