--- a/package.json
+++ b/package.json
@@ -38,18 +38,19 @@
     "@subsquid/typeorm-store": "^0.2.0",
     "@types/lodash": "^4.14.189",
     "@typescript/analyze-trace": "^0.9.1",
+    "ajv": "^6.11.0",
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
     "dotenv-expand": "^10.0.0",
     "graphql-tools": "^8.3.11",
+    "haversine-distance": "^1.2.1",
     "lodash": "^4.17.21",
     "patch-package": "^6.5.0",
     "pg": "8.8.0",
+    "redis": "^4.6.5",
     "type-graphql": "^1.2.0-rc.1",
     "typeorm": "^0.3.11",
-    "url-join": "^4",
-    "haversine-distance": "^1.2.1",
-    "ajv": "^6.11.0"
+    "url-join": "^4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^3.0.0",
@@ -61,6 +62,7 @@
     "@subsquid/substrate-typegen": "^2.1.0",
     "@subsquid/typeorm-codegen": "^0.3.1",
     "@types/node": "16.11.56",
+    "@types/url-join": "^4",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.43.0",
     "eslint": "^8.35.0",
@@ -73,7 +75,6 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-standard": "^5.0.0",
     "prettier": "^2.7.1",
-    "typescript": "^4.8.2",
-    "@types/url-join": "^4"
+    "typescript": "^4.8.2"
   }
 }
